sandc/test/fixtures/astRegression/shouldFail/productions/tryPseudex/TryBlockStatement.sand
pub class TryBlockStatement {
    foo() {
        let a = try {
            foo();
        } catch e: Foo {
            b
        };
    }
}